# bevy_rts

./: .gitignore  Cargo.toml
art/: bevy_rts.blend  bevy_rts.blend1
assets/: animations.ron  registry.json  wolf.anim.ron  wolf_animations.ron
assets/blueprints/: Dude.glb  King.glb  Player.glb
assets/levels/: World.glb  World.meta.ron
assets/materials/: DefaultMaterial.001.glb  DefaultMaterial.glb  Dots Stroke.glb  Material.001.glb  Material.002.glb  Material.003.glb  Material.glb  Material_0.001.glb  Material_0.glb
assets/models/: grass.glb  hand.glb  vacuum_cleaner.glb
assets/shaders/: dissolve.wgsl  grass.wgsl  instancing.wgsl  outline.wgsl  toon_shader.wgsl
crates/camera/: Cargo.toml
crates/camera/src/: camera.rs  follow.rs  lib.rs  plugin.rs
crates/combat/: Cargo.toml
crates/combat/src/: lib.rs  teams.rs
crates/input_actions/: Cargo.toml
crates/input_actions/src/: action.rs  input_map.rs  input_types.rs  lib.rs  (+1 more)
crates/inventory/: Cargo.toml
crates/meta_components/: Cargo.toml
crates/misc/: Cargo.toml
crates/movement/: Cargo.toml
crates/outline/: Cargo.toml
crates/ownership/: Cargo.toml
crates/steering/: Cargo.toml
crates/world_gen/: Cargo.toml
directional_animation/: Cargo.toml  README.md
directional_animation/src/: lib.rs  main.rs
directional_animation/src/ron_generation/: animation_library.rs  animator.rs  generate_animations_ron.rs  mod.rs  plugin.rs
directional_animation/tests/: ron_gen_test.rs
src/: animation_defintions.rs  dudliq.rs  lib.rs  loading.rs  main.rs  player.rs  vacuum_spell.rs
tests/: ron_gen_test.rs
(+48 files in other folders)
