[package]
name = "directional_animation"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }
bevy_asset_loader = { version = "0.21.0" }
serde = { version = "1.0.214", features = ["derive"] }
ron = "0.8.1"
bevy_common_assets = { version = "0.11.0", features = ["ron"] }
thiserror = "1.0.67"
[dev-dependencies]
directional_animation = { path = "." }
